Add items to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
+# IDEs
+
+## VS Code
+
+.vscode/
+.devcontainer/
+
+# Projet
+
+## Gestion/bac à sable
+
 .idea
+.idea/
+
+## Dépendances
+
+*/node_modules/
