--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,10 @@ jobs:
           npm install -g pnpm
           pnpm install
 
+      - name: 🏗️ Build
+        run: |
+          pnpm run -r build
+
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
