--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,18 +4,29 @@ on:
       - master
 name: 🚀 Deploy website on push
 jobs:
+  build:
+    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        node-version: [ 20 ]
   web-deploy:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
+      - name: Install dependencies
+        run: pnpm install
       - name: 🚚 Get latest code
         uses: actions/checkout@v4
-
-      - name: 📦 Install dependencies
-        run: |
-          npm install -g pnpm
-          pnpm install
-
       - name: 🏗️ Build
         run: |
           pnpm run -r build
